--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.2
 info:
-  version: 1.5.0
+  version: 1.6.0
   title: PodcastIndex.org API
   termsOfService: 'https://api.podcastindex.org/tos_v1.0.html'
   contact:
@@ -281,6 +281,21 @@ components:
         prefix:
           value: id1441923632
           description: iTunes ID with optional "id" prefix
+    guid_feed_podcast:
+      name: guid
+      in: query
+      description: >
+        The GUID from the `podcast:guid` tag in the feed. This value is a
+        unique, global identifier for the podcast.
+
+
+        See the namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+      required: true
+      schema:
+        type: string
+      example: 9b024349-ccf0-5f69-a609-6b82873eab3c
     podcast-value:
       name: podcast-value
       in: query
@@ -1052,6 +1067,17 @@ components:
       properties:
         id:
           $ref: '#/components/schemas/id_query'
+    podcastGuid:
+      description: >
+        The GUID from the `podcast:guid` tag in the feed. This value is a
+        unique, global identifier for the podcast.
+
+
+        See the namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+      type: string
+      example: 9b024349-ccf0-5f69-a609-6b82873eab3c
     chash:
       description: |
         The md5 hash of the following feed items in hex format.
@@ -1210,6 +1236,8 @@ components:
       properties:
         id:
           $ref: '#/components/schemas/id_feed'
+        podcastGuid:
+          $ref: '#/components/schemas/podcastGuid'
         title:
           $ref: '#/components/schemas/title_feed'
         url:
@@ -1334,6 +1362,34 @@ components:
           $ref: '#/components/schemas/parseErrors'
         locked:
           $ref: '#/components/schemas/locked'
+        funding:
+          $ref: '#/components/schemas/funding'
+    podcastGuid_query:
+      description: >
+        Value passed to request in the `guid` field
+
+
+        The GUID from the `podcast:guid` tag in the feed. This value is a
+        unique, global identifier for the podcast. See the namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+      type: string
+      example: 9b024349-ccf0-5f69-a609-6b82873eab3c
+    id_guid_query:
+      description: >
+        The Podcast Index feed ID for the feed specified by the `guid` field
+        passed to the request
+      type: string
+      example: 9b024349-ccf0-5f69-a609-6b82873eab3c
+    query_guid:
+      description: |
+        Object containing the input query data
+      type: object
+      properties:
+        guid:
+          $ref: '#/components/schemas/podcastGuid_query'
+        id:
+          $ref: '#/components/schemas/id_guid_query'
     feed_bytag:
       type: object
       properties:
@@ -1419,6 +1475,8 @@ components:
           $ref: '#/components/schemas/url_feed'
         title:
           $ref: '#/components/schemas/title_feed'
+        description:
+          $ref: '#/components/schemas/description_feed'
         author:
           $ref: '#/components/schemas/author'
         image:
@@ -1455,6 +1513,8 @@ components:
       properties:
         id:
           $ref: '#/components/schemas/id_feed'
+        title:
+          $ref: '#/components/schemas/title_feed'
         url:
           $ref: '#/components/schemas/url_feed'
     feeds_dead:
@@ -1747,6 +1807,12 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/item_podcast_recent'
+    oldestItemPublishTime:
+      description: |
+        The date and time the oldest episode in the feed/index
+      type: integer
+      format: Unix Epoch
+      example: 1546399813
     feeds_recent:
       description: |
         List of feeds matching request
@@ -1762,6 +1828,8 @@ components:
             $ref: '#/components/schemas/title_feed'
           newestItemPublishedTime:
             $ref: '#/components/schemas/newestItemPublishedTime'
+          oldestItemPublishTime:
+            $ref: '#/components/schemas/oldestItemPublishTime'
           itunesId:
             $ref: '#/components/schemas/itunesId_feed'
           language:
@@ -1798,6 +1866,8 @@ components:
             $ref: '#/components/schemas/id_feed'
           url:
             $ref: '#/components/schemas/url_feed'
+          image:
+            $ref: '#/components/schemas/image_feed'
           timeAdded:
             $ref: '#/components/schemas/timeAdded'
           status:
@@ -1897,6 +1967,20 @@ components:
         - 'false'
       example: 'true'
   responses:
+    '400':
+      description: Invalid request
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/status'
+              description:
+                $ref: '#/components/schemas/description_response'
+          example:
+            status: false
+            description: Invalid parameters
     '401':
       description: Not authenticated
       content:
@@ -1981,6 +2065,21 @@ components:
                 $ref: '#/components/schemas/query_id'
               feed:
                 $ref: '#/components/schemas/feed_itunes'
+              description:
+                $ref: '#/components/schemas/description_response'
+    podcasts_byguid:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                $ref: '#/components/schemas/status'
+              query:
+                $ref: '#/components/schemas/query_guid'
+              feed:
+                $ref: '#/components/schemas/feed_podcast'
               description:
                 $ref: '#/components/schemas/description_response'
     podcasts_bytag:
@@ -2312,6 +2411,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/search_byterm'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
       x-codeSamples:
@@ -2516,6 +2617,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/search_byperson'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/byfeedid:
@@ -2544,6 +2647,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_byfeedid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/byfeedurl:
@@ -2570,6 +2675,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_byfeedurl'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/byitunesid:
@@ -2595,6 +2702,44 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_byitunesid'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+  /podcasts/byguid:
+    get:
+      tags:
+        - Podcasts
+      summary: By GUID
+      description: >
+        This call returns everything we know about the feed from the feed's
+        GUID.
+
+
+        The GUID is a unique, global identifier for the podcast. See the
+        namespace spec for
+        [guid](https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md#guid)
+        for details.
+
+
+        Examples:
+
+          - https://api.podcastindex.org/api/1.0/podcasts/byguid?guid=9b024349-ccf0-5f69-a609-6b82873eab3c&pretty
+          - Includes `value` and `funding`: https://api.podcastindex.org/api/1.0/podcasts/byguid?guid=9b024349-ccf0-5f69-a609-6b82873eab3c&pretty
+      operationId: podcasts/byguid
+      security:
+        - API Key: []
+          User Agent: []
+          Date: []
+          Authorization: []
+      parameters:
+        - $ref: '#/components/parameters/guid_feed_podcast'
+        - $ref: '#/components/parameters/pretty'
+      responses:
+        '200':
+          $ref: '#/components/responses/podcasts_byguid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/bytag:
@@ -2621,6 +2766,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_bytag'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/trending:
@@ -2650,6 +2797,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_trending'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /podcasts/dead:
@@ -2672,6 +2821,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/podcasts_dead'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /episodes/byfeedid:
@@ -2704,6 +2855,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/episodes_byfeedid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /episodes/byfeedurl:
@@ -2735,6 +2888,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/episodes_byfeedurl'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /episodes/byitunesid:
@@ -2764,6 +2919,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/episodes_byitunesid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /episodes/byid:
@@ -2790,6 +2947,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/episodes_byid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /episodes/random:
@@ -2820,6 +2979,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/episodes_random'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /recent/episodes:
@@ -2849,6 +3010,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/recent_episodes'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /recent/feeds:
@@ -2881,6 +3044,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/recent_feeds'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /recent/newfeeds:
@@ -2910,6 +3075,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/recent_newfeeds'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /recent/soundbites:
@@ -2940,6 +3107,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/recent_soundbites'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /value/byfeedid:
@@ -2968,6 +3137,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/value_byfeedid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /value/byfeedurl:
@@ -2996,6 +3167,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/value_byfeedurl'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /stats/current:
@@ -3018,6 +3191,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/stats_current'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /categories/list:
@@ -3040,6 +3215,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/categories_list'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /hub/pubnotify:
@@ -3067,6 +3244,8 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/hub_pubnotify'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /add/byfeedurl:
@@ -3101,6 +3280,8 @@ paths:
           $ref: '#/components/responses/add_byfeedurl'
         '302':
           $ref: '#/components/responses/add_byfeedurl'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
     post:
@@ -3133,6 +3314,8 @@ paths:
           $ref: '#/components/responses/add_byfeedurl'
         '302':
           $ref: '#/components/responses/add_byfeedurl'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
   /add/byitunesid:
@@ -3165,6 +3348,8 @@ paths:
           $ref: '#/components/responses/add_byitunesid'
         '302':
           $ref: '#/components/responses/add_byitunesid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
     post:
@@ -3196,5 +3381,7 @@ paths:
           $ref: '#/components/responses/add_byitunesid'
         '302':
           $ref: '#/components/responses/add_byitunesid'
+        '400':
+          $ref: '#/components/responses/400'
         '401':
           $ref: '#/components/responses/401'
