Add `value` field to episode endpoint data

--- a/api_src/components/schemas/item_podcast.yaml
+++ b/api_src/components/schemas/item_podcast.yaml
@@ -50,3 +50,5 @@ properties:
     $ref: '../properties/soundbite.yaml'
   soundbites:
     $ref: '../properties/soundbites.yaml'
+  value:
+    $ref: '../properties/value.yaml'
