--- a/api_src/paths/episodes/byfeedid.yaml
+++ b/api_src/paths/episodes/byfeedid.yaml
@@ -13,6 +13,7 @@ get:
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=75075&pretty
       - https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=41504,920666&pretty
       - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=169991&pretty
+      - Includes `value`: https://api.podcastindex.org/api/1.0/episodes/byfeedid?id=4058673&pretty
   operationId: episodes/byfeedid
   security:
     - $ref: '../../components/security/security.yaml'
