--- a/api_src/paths/episodes/byfeedurl.yaml
+++ b/api_src/paths/episodes/byfeedurl.yaml
@@ -12,6 +12,7 @@ get:
 
       - https://api.podcastindex.org/api/1.0/episodes/byfeedurl?url=https://feeds.theincomparable.com/batmanuniversity&pretty
       - Includes `persons`: https://api.podcastindex.org/api/1.0/episodes/byfeedurl?url=https://engineered.network/pragmatic/feed/index.xml&pretty
+      - Includes `value`: https://api.podcastindex.org/api/1.0/episodes/byfeedurl?url=https://closing-the-loop.github.io/feed.xml&pretty
   operationId: episodes/byfeedurl
   security:
     - $ref: '../../components/security/security.yaml'
