Change "url" to "name" in categories/list response

--- a/api_src/components/schemas/feed_categories.yaml
+++ b/api_src/components/schemas/feed_categories.yaml
@@ -2,5 +2,5 @@ type: object
 properties:
   id:
     $ref: '../properties/id_category.yaml'
-  url:
+  name:
     $ref: '../properties/name_category.yaml'
