--- a/api_src/components/schemas/item_search_byperson.yaml
+++ b/api_src/components/schemas/item_search_byperson.yaml
@@ -48,5 +48,5 @@ properties:
     $ref: '../properties/language.yaml'
   chaptersUrl:
     $ref: '../properties/chaptersUrl.yaml'
-  transcriptUrl:
-    $ref: '../properties/transcriptUrl.yaml'
+  transcripts:
+    $ref: '../properties/transcripts.yaml'
