--- a/api_src/components/responses/400.yaml
+++ b/api_src/components/responses/400.yaml
@@ -9,5 +9,5 @@ content:
         description:
           $ref: '../properties/description_response.yaml'
     example:
-      status: false
+      status: "false"
       description: "Invalid parameters"
