--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -946,9 +946,9 @@ components:
     duration:
       description: >
         The estimated length of the item specified by the `enclosureUrl` in
-        minutes
+        seconds
       type: integer
-      format: minutes
+      format: seconds
       example: 54
     explicit:
       description: |
